# learningopengl

./: .gitignore  CMakeLists.txt  conanfile.txt
libs/GLAD/: glad.c
libs/GLAD/glad/: glad.h
src/: main.cpp  shader.cpp  shader.hpp
